appId: com.ahrar.maestro-bitrise-flutter.dev
name: first
---
- launchApp
- assertVisible: "0"
- tapOn: add
- assertVisible: "1"
- takeScreenshot: test_screenshots/homePage
