appId: com.ahrar.maestro-bitrise-flutter.dev
name: second
---
- assertVisible: "1"
- tapOn: remove
- assertVisible: "0"
- takeScreenshot: test_screenshots/homePage1
